# aiot-quic-hybrid

./: .gitignore  CMakeLists.txt  README.md  fix_quic.py  fix_quic2.py  fix_quic3.py  partitions.csv  patch_wolfssl_quic.py  patch_wolfssl_quic3.py  patch_wolfssl_quic_decrypt.py  sdkconfig  sdkconfig.defaults
data/: tinyml_dataset.csv  tinyml_dataset_20260420-233948.csv  tinyml_dataset_20260420_224333.csv  tinyml_dataset_20260421-000037.csv  tinyml_dataset_20260421-000655.csv  tinyml_dataset_20260421-001149.csv  tinyml_dataset_20260421-001733.csv  tinyml_dataset_20260421-002027.csv  tinyml_dataset_20260421-002219.csv
experiments/capture_helpers/: capture_quic_pcap.sh  export_quic_packet_csv.sh
experiments/telemetry_analyzer/: README.md  analyze_quic_perf.py  parse_aiot_monitor_log.py  plot_aiot_metrics.py  summarize_aiot_metrics.py
experiments/telemetry_analyzer/runs/datagram_only/: summary.json  telemetry.csv  tx_events.csv
experiments/telemetry_analyzer/runs/hybrid/: summary.json  telemetry.csv  tx_events.csv
experiments/telemetry_analyzer/runs/stream_only/: summary.json  telemetry.csv  tx_events.csv
experiments/telemetry_analyzer/runs_stress/datagram_only/: summary.json  telemetry.csv  tx_events.csv
experiments/telemetry_analyzer/runs_stress/hybrid/: summary.json  telemetry.csv  tx_events.csv
experiments/telemetry_analyzer/runs_stress/stream_only/: summary.json  telemetry.csv  tx_events.csv
firmware/: sdkconfig  sdkconfig.defaults
host_receiver/: run_server.sh
host_receiver/certs/: cert.pem
host_receiver/picoquic/: Makefile  cert.pem  key.pem  pico_baton  pico_sim  picohttp_ct  picolog_t  picoquic-config-version.cmake  picoquic-config.cmake  picoquic_ct  picoquic_sample  picoquicdemo  pqbench  thread_test
host_receiver/picoquic/picohttp/: democlient.c  demoserver.c
host_receiver/picoquic/picoquic/: picoquic.h
host_receiver/picotls/: cli  ptlsbench  test-fusion.t  test-minicrypto.t  test-openssl.t
src/components/ai_inference/: CMakeLists.txt  ai_inference.c  ai_inference_model_data.c  ai_inference_tflm.cc  idf_component.yml
src/components/ai_inference/include/: ai_inference.h  ai_inference_model_asset_generated.h  ai_inference_model_data.h  ai_inference_tflm.h
src/components/common/: CMakeLists.txt  ai_result.c  data_packet.c
src/components/common/include/: ai_result.h  data_packet.h  image_chunk.h
src/components/core_mqtt/: CMakeLists.txt
src/components/dl_qads/: CMakeLists.txt  dl_qads.c
src/components/dl_qads/include/: dl_qads.h
src/components/esp-http3/: CMakeLists.txt  README.md  idf_component.yml
src/components/esp-http3/include/: esp_http3.h
src/components/esp-http3/include/client/: http3_client.h  power_lock.h
src/components/esp-http3/include/core/: ack_manager.h  crypto_manager.h  flow_controller.h  frame_processor.h  loss_detector.h  quic_connection.h
src/components/esp-http3/include/h3/: h3_constants.h  h3_frame.h  h3_handler.h
src/components/esp-http3/include/quic/: quic_aead.h  quic_constants.h  quic_crypto.h  quic_frame.h  quic_packet.h  quic_types.h  quic_varint.h
src/components/esp-http3/include/tls/: tls_handshake.h
src/components/esp-http3/src/client/: http3_client.cc
src/components/esp-http3/src/core/: ack_manager.cc  crypto_manager.cc  flow_controller.cc  frame_processor.cc  loss_detector.cc  quic_connection.cc
src/components/esp-http3/src/h3/: h3_frame.cc  h3_handler.cc
src/components/esp-http3/src/quic/: quic_aead.cc  quic_crypto.cc  quic_frame.cc  quic_packet.cc  quic_types.cc  quic_varint.cc
src/components/esp-http3/src/tls/: tls_handshake.cc
src/components/esp_camera/driver/: cam_hal.c
src/components/ngtcp2/: CMakeLists.txt
src/components/ngtcp2/ngtcp2/crypto/includes/wolfssl/: options.h
src/components/ngtcp2/ngtcp2/crypto/wolfssl/: wolfssl.c
src/components/ngtcp2/ngtcp2/lib/: ngtcp2_conn.c  ngtcp2_ringbuf.c
src/components/receiver/: CMakeLists.txt  receiver.c
src/components/receiver/include/: receiver.h
src/components/sources/: CMakeLists.txt  source_manager.c
src/components/sources/include/: source_manager.h
src/components/transport/: CMakeLists.txt  esp_ev_compat.c  esp_ev_compat.h  moqt_http3_client.cpp  moqt_http3_client.h  moqt_ngtcp2_client.c  moqt_ngtcp2_client.h  moqt_quic.c  moqt_quic.h  moqt_quic_client.c  moqt_quic_client.h  moqt_udp_client.c  moqt_udp_client.h  mqtt_client.h  mqtt_quic_transport.c  mqtt_quic_transport.h  ngtcp2_sample.c  ngtcp2_sample.h  transport_router.c
src/components/transport/include/: transport_router.h
src/components/wifi_link/: CMakeLists.txt  wifi_link.c
src/components/wifi_link/include/: wifi_link.h
src/components/wolfssl/: CHECKSUMS.json  README.md  idf_component.yml
src/components/wolfssl/examples/template/main/: idf_component.yml
src/components/wolfssl/examples/wolfssl_test/: README.md
src/components/wolfssl/include/: user_settings.h
src/components/wolfssl/src/: quic.c
src/main/: CMakeLists.txt  app_config.h  app_main.c  core_mqtt_config.h  esp_ev_compat.c  esp_ev_compat.h  idf_component.yml  mqtt_quic_transport.c  mqtt_quic_transport.h  ngtcp2_sample.c  ngtcp2_sample.h  quic_demo.c  quic_demo_main.c
